lab-03: add report endpoint in employee service
