# reports/docs/swagger.json
@@ -38,7 +38,24 @@
         }
     },
     "definitions": {
-        "dto.EmployeeResponse": {
+        "dto.ReportResponse": {
+            "type": "object",
+            "properties": {
+                "employees": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/internal_handler_dto.EmployeeResponse"
+                    }
+                },
+                "is_fired": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "internal_handler_dto.EmployeeResponse": {
             "type": "object",
             "properties": {
                 "birth_date": {
@@ -52,23 +69,6 @@
                 },
                 "is_fired": {
                     "type": "boolean"
-                }
-            }
-        },
-        "dto.ReportResponse": {
-            "type": "object",
-            "properties": {
-                "employees": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dto.EmployeeResponse"
-                    }
-                },
-                "is_fired": {
-                    "type": "integer"
-                },
-                "total": {
-                    "type": "integer"
                 }
             }
         },
